# lanzou_manga_downloader

./: .gitignore  DIST_README.md  DOCKER_SUMMARY.md  ENV_CONFIG_TEMPLATE.md  FEAPDER_VERSION.md  README.md  RUNNING.md  SECURE_DEVELOPMENT_GUIDE.md  lanzou_downloader.py  lanzou_downloader_gui.spec  lanzou_feapder_gui.spec  lanzoub_downloader_gui.spec  lanzoub_downloader_gui_mix_v6_0.spec  lanzoub_downloader_gui_v6_2_1.spec  log.txt  pyproject.toml  requirements.txt  requirements_reverse.txt  蓝奏云漫画下载器_精简版.spec  蓝奏云漫画资源链接.txt
js-reverse-automation/: SKILL.md
js-reverse-automation/agents/: openai.yaml
js-reverse-automation/references/main/: JSRPC.md  burp-autodecoder.md  flask.md
lanzou_downloader_complete_package/: README.md
lanzou_downloader_complete_package/Debug_Version/: README.md
package_build/: build_v5_0.ps1  lanzou_downloader_gui_v5_0.spec  pyinstaller_version_v5_0.txt
release/v5.0/: README.md  requirements.txt
scripts/: build_apk_wsl.sh
source_code/: lanzou_downloader_gui.py  lanzou_downloader_guiless.py  lanzou_feapder_gui.py  lanzou_feapder_spider.py  lanzou_gui.py  lanzou_simple_gui.py  launcher.py
source_code_android/: .gitignore  MIGRATION_MAP.md  README.md  UI_ICON_HANDOFF.md  keystore.properties.example  local.properties  private_credentials.template.properties  settings.gradle.kts  wsl_android_build.sh  wsl_build_apk.md  wsl_ubuntu24_apk_dependencies.md
source_code_android/app/: build.gradle.kts
source_code_android/gradle/wrapper/: gradle-wrapper.properties
source_code_common/: MODULES.md  STRUCTURE.md  __init__.py  lanzou_core.py  lanzou_download_core.py  lanzou_errors.py  lanzou_gui_core.py  lanzou_list_fetcher.py  lanzou_types.py
source_code_dev/: STRUCTURE.md  lanzou_downloader_gui_dev.py  lanzou_downloader_gui_dev_mix.py  lanzou_downloader_gui_dev_pure_requests.py  requirements.txt
(+50 files in other folders)
