[project]
name = "lanzou-manga-downloader"
version = "0.1.0"
description = "蓝奏云漫画下载器 - 一个专门用于从蓝奏云网盘批量下载漫画或文件的工具"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altgraph==0.17.5",
    "attrs==25.4.0",
    "certifi==2026.1.4",
    "cffi==2.0.0",
    "charset-normalizer==3.4.4",
    "click==8.3.1",
    "colorama==0.4.6",
    "cryptography==46.0.3",
    "cssselect==1.3.0",
    "DataRecorder==3.6.2",
    "DownloadKit==2.0.7",
    "DrissionPage==4.1.1.2",
    "et-xmlfile==2.0.0",
    "feapder>=1.9.3",
    "filelock==3.20.3",
    "h11==0.16.0",
    "idna==3.11",
    "lxml==6.0.2",
    "openpyxl==3.1.5",
    "outcome==1.3.0.post0",
    "packaging==25.0",
    "pefile==2024.8.26",
    "psutil==7.2.1",
    "pycparser==2.23",
    "pyinstaller==6.18.0",
    "pyinstaller-hooks-contrib==2026.0",
    "PySocks==1.7.1",
    "python-dotenv==1.2.1",
    "pywin32-ctypes==0.2.3",
    "requests==2.31.0",
    "requests-file==3.0.1",
    "selenium==4.27.0",
    "setuptools==80.10.1",
    "sniffio==1.3.1",
    "sortedcontainers==2.4.0",
    "tldextract==5.3.1",
    "tqdm==4.67.1",
    "trio==0.32.0",
    "trio-websocket==0.12.2",
    "typing-extensions==4.15.0",
    "urllib3==2.6.3",
    "webdriver-manager==4.0.2",
    "websocket-client==1.9.0",
    "wsproto==1.3.2",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "black>=24.10.0",
    "flake8>=7.1.1",
    "mypy>=1.13.0",
]

[project.scripts]
gui = "source_code.lanzou_downloader_gui:main"
cli = "source_code.lanzou_downloader_guiless:main"
feapder = "source_code.lanzou_feapder_spider:main"
feapder-gui = "source_code.lanzou_feapder_gui:main"

[tool.setuptools]
packages = ["source_code"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
